@@ -43,6 +43,8 @@ Broker:
   mount_point set. Closes bug #1180765.
 - Fix duplicate retained messages being sent for some wildcard patterns.
 - Report an error if the bind_address config option contains a ":".
+- Bridges now set their notification state before attempting to connect, so if
+  they fail to connect the state can still be seen.
 
 Client library:
 - Allow control of reconnection timeouts in mosquitto_loop_forever() and after
